@@ -1,6 +1,18 @@
 <?php
 class modMonitorRequestItem extends xPDOSimpleObject {
     
+    public function set($k, $v= null, $vType= '') {
+        
+        switch($k){
+            case 'parent':
+                if(!$v){
+                    $v = 0;
+                }
+                break;
+        }
+        
+        return parent::set($k, $v, $vType);
+    }
     
     public function save($cacheFlag= null) {
         
